# server/src/routes.ts
@@ -16,7 +16,8 @@ routes.post('/users', new UserController().create)
 routes.get('/users', new UserController().findAll)
 routes.get('/users/search', new UserController().findByName)
 routes.get('/users/:id', new UserController().findById)
-routes.put('/users/:id', new UserController().update)
+routes.put('/users/:id', new UserController().updateUser)
+routes.put('/users/account/:id', new UserController().updateAccount)
 routes.delete('/users/:id', new UserController().delete)
 
 routes.post('/products', new ProductController().create)
